; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-fixed-rate.c_clk_register_fixed_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-fixed-rate.c_clk_register_fixed_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }
%struct.device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.clk* @clk_register_fixed_rate(%struct.device* %0, i8* %1, i8* %2, i64 %3, i64 %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.device*, %struct.device** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* %10, align 8
  %16 = call %struct.clk* @clk_register_fixed_rate_with_accuracy(%struct.device* %11, i8* %12, i8* %13, i64 %14, i64 %15, i32 0)
  ret %struct.clk* %16
}

declare dso_local %struct.clk* @clk_register_fixed_rate_with_accuracy(%struct.device*, i8*, i8*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
